--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-portfolio-1",
-  "homepage": "https://rishabh2640.github.io/Web-Portfolio",
+  "homepage": "https://Vnjvibhash.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
